<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.detail.DetailFragment">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.deezer_test.utils.ConverterDate"/>
        <variable name="detailViewModel"
                  type="com.example.deezer_test.ui.fragment.detail.DetailViewModel"/>

    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

            <androidx.cardview.widget.CardView
                    android:id="@+id/detail_cardview_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="2dp"
                    android:padding="2dp"
                    android:layout_marginStart="20dp">
                <ImageView
                        android:id="@+id/bottom_sheet_album_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                <TextView
                        android:id="@+id/bottom_sheet_album_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{detailViewModel.MAlbum.title}"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                />

                <TextView
                        android:id="@+id/bottom_sheet_track_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{(detailViewModel.MIsAlbumDuration == false) ? View.VISIBLE : View.GONE}"
                        android:text="@{detailViewModel.MTrack.title}"
                        android:textSize="15sp"
                        android:textStyle="bold"
                />
                <TextView
                        android:id="@+id/bottom_sheet_track_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@{(detailViewModel.MIsAlbumDuration == false) ? String.format(@string/detail_duration, ConverterDate.secondToHour(detailViewModel.MTrack.duration)) : String.format(@string/detail_duration, ConverterDate.totalAlbum(detailViewModel.MListTrack)) }"
                />
            </LinearLayout>


        </LinearLayout>
        <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/colorBottomIcon">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_heart"
                        android:tint="@color/colorBottomIcon"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bottom_add_favorites"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"/>

            </LinearLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
        <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/colorBottomIcon">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_download"
                        android:tint="@color/colorBottomIcon"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bottom_donwload"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"/>

            </LinearLayout>
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/colorBottomIcon">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_microphone"
                        android:tint="@color/colorBottomIcon"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bottom_show_lyrics"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"/>

            </LinearLayout>
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/colorBottomIcon">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_share"
                        android:tint="@color/colorBottomIcon"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bottom_share"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"/>

            </LinearLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
        <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/colorBottomIcon">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:tint="@color/colorBottomIcon"
                        android:src="@drawable/ic_singer"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bottom_artist_page"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="20dp"/>
            </LinearLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</layout>