<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.detail.DetailFragment">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.deezer_test.utils.ConverterDate"/>
        <variable name="detailViewModel"
                  type="com.example.deezer_test.ui.fragment.detail.DetailViewModel"/>

    </data>

    <ScrollView
            android:id="@+id/list_track_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@drawable/gradient_background">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                    android:id="@+id/detail_cardview_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="2dp"
                    android:padding="2dp">

                <ImageView
                        android:id="@+id/detail_image_album"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                />

            </androidx.cardview.widget.CardView>


            <TextView
                    android:id="@+id/detail_title_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{detailViewModel.MAlbum.title}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/detail_cardview_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

            <LinearLayout
                    android:id="@+id/detail_layout_album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/detail_title_album"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center">
                <TextView
                        android:id="@+id/detail_track_nbr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{ConverterDate.DateToString(detailViewModel.MAlbum.releaseDate) + ` • ` +  detailViewModel.MAlbum.nbTracks.toString() }"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp"/>

                <ImageView
                        android:id="@+id/detail_track_nbr_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_disc"/>
            </LinearLayout>

            <Button
                    android:id="@+id/detail_button_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/detail_layout_album"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/detail_shuffle"
                    android:drawableStart="@drawable/ic_play"
                    android:background="@drawable/anim_blue_button"
                    android:padding="10dp"
                    android:textColor="@android:color/white"

            />

            <LinearLayout
                    android:id="@+id/detail_layout_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/detail_button_shuffle"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="end">

                <ImageView
                        android:id="@+id/detail_crush_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_heart"
                        android:layout_marginEnd="8dp"
                />

                <ImageView
                        android:id="@+id/detail_more_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ellipsis"
                        android:layout_marginEnd="10dp"
                />

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          app:layout_constraintTop_toBottomOf="@+id/detail_layout_setting"
                          android:id="@+id/linearLayout"
                          android:orientation="horizontal"
                          android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/detail_text_download"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_download"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>

                    <com.suke.widget.SwitchButton
                            android:id="@+id/detail_switch_download"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:sb_shadow_effect="false"
                            app:sb_checked="true"
                            app:sb_show_indicator="false"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
            <com.metagalactic.dotprogressbar.DotProgressBar
                    android:id="@+id/detail_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dpb_noOfDots="3"
                    app:dpb_dotSpacing="3dp"
                    app:dpb_animationDuration="600"
                    app:dpb_dotColor="@android:color/holo_blue_dark"
                    app:layout_constraintTop_toTopOf="@+id/recyclerView"
                    app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
                    app:layout_constraintStart_toStartOf="@+id/recyclerView"
                    app:layout_constraintEnd_toEndOf="@+id/recyclerView"/>
            <TextView android:id="@+id/detail_no_tracks"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/recyclerView"
                      app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
                      app:layout_constraintStart_toStartOf="@+id/recyclerView"
                      app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                      android:text="@string/detail_no_tracks"
                      android:textSize="20sp"
                      android:visibility="@{(detailViewModel.MListTrack == null) ? View.VISIBLE : View.GONE }"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>